// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit test for the SectorDetail component Should match snapshot - for sector with parent sector. 1`] = `
<div
  class="flex flex-col gap-3"
  data-testid="sector-detail"
>
  <div
    class="text-dial-blue text-2xl font-bold pb-4"
  >
    <p
      data-testid="sector-name"
    >
      Sector: Example Sector
    </p>
  </div>
  <div
    class="flex flex-col gap-3"
  >
    <div
      class="text-xl"
    >
      <p
        class="text-dial-blue"
      >
        Parent Sector:
      </p>
      <p
        class="text-button-gray"
        data-testid="parent-sector"
      >
        Example Parent Sector
      </p>
    </div>
    <div
      class="text-xl"
    >
      <p
        class="text-dial-blue"
      >
        Locale:
      </p>
      <p
        class="text-button-gray"
        data-testid="sector-locale"
      >
        English (en)
      </p>
    </div>
    <div
      class="flex flex-row text-xl gap-x-2"
    >
      <input
        checked=""
        class="h-8 w-8"
        data-testid="checkbox"
        disabled=""
        type="checkbox"
      />
      <p
        class="text-dial-blue"
      >
        Is displayable
      </p>
    </div>
  </div>
</div>
`;

exports[`Unit test for the SectorDetail component Should match snapshot - for sector with parent sector. 2`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
  />
</div>
`;

exports[`Unit test for the SectorDetail component Should match snapshot - for sector without parent sector. 1`] = `
<div
  class="flex flex-col gap-3"
  data-testid="sector-detail"
>
  <div
    class="text-dial-blue text-2xl font-bold pb-4"
  >
    <p
      data-testid="sector-name"
    >
      Sector: Example Sector
    </p>
  </div>
  <div
    class="flex flex-col gap-3"
  >
    <div
      class="text-xl"
    >
      <p
        class="text-dial-blue"
      >
        Locale:
      </p>
      <p
        class="text-button-gray"
        data-testid="sector-locale"
      >
        English (en)
      </p>
    </div>
    <div
      class="flex flex-row text-xl gap-x-2"
    >
      <input
        checked=""
        class="h-8 w-8"
        data-testid="checkbox"
        disabled=""
        type="checkbox"
      />
      <p
        class="text-dial-blue"
      >
        Is displayable
      </p>
    </div>
  </div>
</div>
`;

exports[`Unit test for the SectorDetail component Should match snapshot - for sector without parent sector. 2`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
  />
</div>
`;
